# protobom-py

./: .gitignore  README.md  build.sh  pdm_build.py  pyproject.toml
.github/actions/pre-build/: action.yml
.github/workflows/: autofix.yml  ci.yml  main.yml
protobom_py/: __init__.py
tests/: test_protobom.py
