[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "protobom-py"
version = "0.1b1"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE.txt" }
authors = [
    { name = "Maximilian Hils" }
]
dependencies = [
    "protobuf",
    "wasmtime",
]

[project.urls]
Source = "https://github.com/appcensus-app-analysis/protobom-py"

[tool.pdm.dev-dependencies]
dev = [
    "ruff",
    "pytest",
    "pytest-cov",
    "mypy",
    "types-protobuf",
    "pdm-backend",
]

[tool.pdm.scripts]
test = { composite = [
    "ruff .",
    "pytest --cov=protobom_py --cov-report term-missing",
    "mypy ."
] }
fmt = { composite = [
    "ruff --fix-only .",
    "ruff format .",
] }

[tool.pdm.build]
excludes = ["**/*.proto"]
source-includes = [
    "protobom_py/*.proto",
    "protobom-writer/*",
]

[tool.coverage.run]
omit = [
    "protobom_py/*_pb2.py",
]